Update: updated blog page blog cards with images

--- a/content/first.mdx
+++ b/content/first.mdx
@@ -5,7 +5,7 @@ category: "Web"
 publishedAt: '2023-01-25'
 image: '/images/first/Serverless DB.png'
 coverImage: '/images/first/Serverless DB.png'
-coverImageBlur: '/images/first/Serverless DB 2 blur.png'
+coverImageBlur: '/images/first/Serverless DB_blur.png'
 coverImageAlt: "Serverless Databases for Serverless & Edge"
 ---
 
