--- a/content/second.mdx
+++ b/content/second.mdx
@@ -4,8 +4,8 @@ summary: 'An overview of databases that pair well with modern application and co
 category: "Web"
 publishedAt: '2023-01-25'
 image: '/images/first/Serverless DB.png'
-coverImage: '/images/first/Serverless DB.png'
-coverImageBlur: '/images/first/Serverless DB 2 blur.png'
+coverImage: '/images/first/Serverless DB 2.png'
+coverImageBlur: '/images/first/Serverless DB 2_blur.png'
 coverImageAlt: "Serverless Databases for Serverless & Edge"
 ---
 
